# Deterministic-LLM-Pipeline-for-JSON-XML-Data-Extraction

./: .env.example  .gitignore  3_CHAPTER.md  ARCHITECTURE.md  CHANGELOG.md  CODEX.md  INSTRUCTION.md  README.md  SPEC.md  TEST_PLAN.md  project_goal.md  pyproject.toml  technical_specification.md
configs/: CONFIG_SCHEMA.json  anthropic_run.example.json  mock_run.json  mock_run_xml.json  openai_flood_run.example.json  openai_flood_run.json  openai_run.example.json  openai_run.json
docs/: IMPLEMENTATION_NOTES.md
examples/expected/: demo.json  demo.xml
examples/inputs/: demo.txt  flood_example.txt  my_text.txt  my_text_2.txt  my_text_3.txt
examples/schema_candidates/: README.md
fixtures/: mock_generation_valid.json
goldens/: demo.golden.xml
schemas/: extraction_record.schema.json  extraction_record.xsd  flood_evacuation.schema.json
src/deterministic_pipeline/: __init__.py  artifact_registry.py  canonicalize.py  canonicalizers.py  capabilities.py  cli.py  config.py  contracts.py  formal_gate.py  formats.py  parsers.py  pipeline.py  preprocess.py  prompting.py  provider_registry.py  providers.py  repair.py  repairers.py  reproducibility.py  runtime_registry.py  schema_tools.py  strategy_resolution.py  tracing.py  (+9 more)
tests/: test_artifact_registry.py  test_capabilities.py  test_pipeline.py  test_provider_registry.py  test_providers.py  test_repair.py  test_schema_tools.py  test_strategy_resolution.py  test_typing.py  test_xml_canonicalizer.py  test_xml_parser.py  test_xml_repairers.py  test_xml_type_mappers.py  test_xml_validator.py  test_xsd_schema_tools.py
