[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deterministic-llm-pipeline"
version = "0.1.0"
description = "Deterministic JSON structuring pipeline with formal validation and repair around LLM output."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.23,<5",
]

[project.scripts]
detpipe = "deterministic_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
